Added an ES6 file to wikipedia search demo and removed the demo on AngularJS

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-AngularJS-ES6-BookShelf/node_modules
-AngularJS-ES6-BookShelf/jspm_packages
-WikipediaSearch-jQuery/node_modules
-WikipediaSearch-jQuery/jspm_packages
+node_modules
+jspm_packages
